feat: todo editing

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,11 @@ button:hover {
 button:active {
     background-color: #ccc;
 }
+
+.hidden {
+    display: none;
+}
+
+.active {
+    display: block;
+}
